add paging 3, unit test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">GithubUser</string>
-
-    <string name="description">Hello, My name is %s, currently i live in %s and work for %s</string>
-    <string name="username"> \u0040%s </string>
-    <string name="search">Search</string>
-    <string name="search_hint">Search user</string>
-    <string name="tab_follower">Follower</string>
-    <string name="tab_following">Following</string>
-    <string name="setting">Setting</string>
-    <string name="favorite">Favorite</string>
-    <string name="dark_mode">Dark Mode</string>
+    <string name="retry" tools:keep="@string/retry">Retry</string>
 </resources>
