--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">GithubUser</string>
     <string name="retry" tools:keep="@string/retry">Retry</string>
+    <string name="user_id">\@%1$s</string>
+    <string name="title_home">Home</string>
+    <string name="title_repository">Repository</string>
+    <string name="title_favorite">Favorite</string>
+    <string name="title_detail_user">Detail User</string>
+
+    <string name="label_followers">Followers</string>
+    <string name="label_following">Following</string>
+
+    <string name="cd_home">Home</string>
+    <string name="cd_repository">Repository</string>
+    <string name="cd_favorite">Favorite</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="feature_not_implemented">This feature is not implemented yet</string>
 </resources>
